* Parameter `incomplete` added to summary.fit.synds() function.  

BUG FIXES
* In multi.compare() default colour and fill scales restored for ggplot() to
  allow for more than 9 levels/synthetic data sets to be plotted.
* Automatic detection of incomplete synthesis.
* Method for first variable is NOT changed to "sample" for "norm", "normrank", 
  "lognorm", "sqrtnorm", and "cubertnorm".


synthpop 1.7-0
---------------

NEW FEATURES
* New function utility.tables() summarises oneway, two- or three-way tables 
  of utility by utility.tab(). Plots and tables of utility measures can be 
  produced.
* Functions utility.gen(), utility.tab(), and compare.synds() can be used 
  to assess the utility of synthetic data sets that were created NOT using 
  synthpop. They have to be provided as a data.frame or a list.
* utility.gen() and utility.tab() have a parameter `k.syn` to indicate that 
  the sample size itself has been synthesised. The default value is `FALSE` 
  that will apply to synthetic data created by synthpop. 
* The following additional statstics for each synthesis are calculated in 
  utility.tab(): "G" - the adjusted likelihood ratio chi-squared statistic 
  for comparing tables with original and synthesised values, 
  "JSD" - the Jensen-Shannon distance between the tables with original and 
* These additional statistics are computed by utility.tab() and utility.gen(): 
  "PO50" - the percentage over 50% of each synthetic data set where the model 
  used to predict real or synthetic is correct; "SPECKS" the Kolmogorov-Smirnov 
  distance comparing the prpensity scores for the synthetic and original data.
* Parameter `print.flag` is added to utility.gen() and utility.tab() to 
  suppress, if desired, output for simulations.
* compare.synds() produces a table, tab.res, that gives the oneway utility
  statistics computed by utility.tab with parameter tables = "oneway"
* New parameters `plot` and `table` in compare.synds() function to indicate,